@@ -11,6 +11,8 @@
 - extended `ROUTE('SOCKET / @websocket_api_name')` method by adding WebSocket API without action
 - added `websocketclient.api()` method
 - added `websocketclient.api(schema, [data], [callback], [timeout])` method
+- extended `U.copy()` by adding `all` argument
+- fixed `array.random(true)` with only the one item
 
 ========================
 0.0.43
